Fix styling bug on Firefox

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@ form {
   padding: 10px;
 }
 
+fieldset, legend {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 label {
   margin-right: 10px;
 }
