--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -13,6 +13,7 @@
   background: none;
   padding: 0;
   font-size: medium;
+  cursor: pointer;
 }
 
 .Nav__expanded {
